# ddd-at-rust

./: Cargo.toml
chapter02_value_object/: Cargo.toml
chapter02_value_object/src/: lib.rs  s1.rs  s2.rs  s3.rs  s4.rs  s5.rs  s6.rs
chapter03_entity/: Cargo.toml
chapter03_entity/src/: lib.rs  s1.rs  s2.rs  s3.rs
chapter04_domain_service/: Cargo.toml
chapter04_domain_service/src/: s1.rs  s2.rs
chapter05_repository/: Cargo.toml
chapter05_repository/src/: domain.rs  lib.rs  mock_repository.rs  orm_repository.rs  schema.rs  simple_repository.rs
chapter06_application_service/: Cargo.toml
chapter06_application_service/src/: domain.rs  lib.rs  repository.rs  service.rs  usecase.rs
chapter08_sample_application/: Cargo.toml
chapter08_sample_application/src/: domain.rs  infrastructure.rs  lib.rs  usecase.rs
chapter08_sample_application/src/app/: mock_server.rs  rdb_server.rs
chapter08_sample_application/src/domain/: value_object.rs
chapter08_sample_application/src/domain/entity/: user.rs
chapter08_sample_application/src/domain/repository/: user.rs
chapter08_sample_application/src/domain/service/: user.rs
chapter08_sample_application/src/domain/value_object/: mail_address.rs  name.rs  user_id.rs
chapter08_sample_application/src/infrastructure/: api.rs  datastore.rs  server.rs
chapter08_sample_application/src/infrastructure/api/: mock_api.rs  rdb_api.rs
chapter08_sample_application/src/infrastructure/server/: filter.rs
chapter08_sample_application/src/infrastructure/server/handler/: user.rs
chapter08_sample_application/src/usecase/: user.rs
chapter08_sample_application/src/usecase/dto/: user.rs
chapter08_sample_application/src/usecase/input/: user.rs
common/: Cargo.toml
common/src/: lib.rs
