[package]
name = "chapter03_entity"
version = "0.1.0"
authors = ["shiki.tak <shiki.tak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.1.0"
derive-new = "0.5.8"
regex = "1.3.7"
anyhow = "1.0.28"
rust_decimal = "1.4.1"

common = { path = "../common" }