[package]
name = "chapter03_entity"
version = "0.1.0"
authors = ["shiki.tak <shiki.tak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.1.0"
anyhow = "1.0.28"
derive_more = "0.99.5"

common = { path = "../common" }