[package]
name = "chapter04_domain_service"
version = "0.1.0"
authors = ["shiki-tak <shiki.tak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.8"

chapter03_entity = { path = "../chapter03_entity" }