[package]
name = "chapter05_repository"
version = "0.1.0"
authors = ["shiki-tak <shiki.tak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
derive-getters = "0.1.0"
derive_more = "0.99.5"
derive-new = "0.5.8"
postgres = "0.17.2"
uuid = { version = "0.8", features = ["serde", "v4"] }

common = { path = "../common"}